@@ -25,7 +25,6 @@ SOFTWARE.
 package de.amr.yt.pacman.ui.animation;
 
 import java.awt.image.BufferedImage;
-import java.util.Arrays;
 import java.util.List;
 
 import de.amr.yt.pacman.ui.Sprites;
@@ -35,7 +34,7 @@ import de.amr.yt.pacman.ui.Sprites;
  */
 public class PacManDyingAnimation extends SpriteAnimation {
 
-	private final List<Integer> frames = Arrays.asList(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10);
+	private final List<Integer> frames = List.of(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10);
 
 	public PacManDyingAnimation() {
 		name = "pacman-dying";
