@@ -25,7 +25,6 @@ SOFTWARE.
 package de.amr.yt.pacman.ui.animation;
 
 import java.awt.image.BufferedImage;
-import java.util.Arrays;
 import java.util.List;
 
 import de.amr.yt.pacman.model.PacMan;
@@ -33,7 +32,7 @@ import de.amr.yt.pacman.ui.Sprites;
 
 public class PacManWalkingAnimation extends SpriteAnimation {
 
-	private final List<Integer> frames = Arrays.asList(1, 0, 1, 2);
+	private final List<Integer> frames = List.of(1, 0, 1, 2);
 	private final PacMan pacMan;
 
 	public PacManWalkingAnimation(PacMan pacMan) {
